--- a/public/styles.css
+++ b/public/styles.css
@@ -76,6 +76,7 @@ body{
 
 .row{
     padding-bottom: 3%;
+    
 }
 
 .passion{
@@ -118,6 +119,13 @@ body{
 
 .projects{
     width: 90%;
+    margin: 0 auto;
+}
+
+.skills{
+    padding-bottom: 10%;
+    border-bottom:rgb(156, 156, 156) 1px solid;
+    max-width: 90%;
     margin: 0 auto;
 }
 
