--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@ body{
 }
 
 #home{
-    background-image: url("background.svg");
+    background-image: url("img/background.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
